hphp/test/zend/good/ext-standard-strings/unpack.php
<?php
	var_dump(unpack("-2222", 1));
	echo "Done\n";
?>